# mini-bank-api

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 209ff905874c_initial_schema.py
app/: __main__.py  main.py
app/api/: router.py
app/crud/: accounts.py  users.py
app/database/: models.py  session.py
app/schemas/: users.py
